# proto/gen/api/v1/memo_service_grpc.pb.go
@@ -1,6 +1,6 @@
 // Code generated by protoc-gen-go-grpc. DO NOT EDIT.
 // versions:
-// - protoc-gen-go-grpc v1.6.1
+// - protoc-gen-go-grpc v1.6.2
 // - protoc             (unknown)
 // source: api/v1/memo_service.proto
 
@@ -21,6 +21,8 @@ const _ = grpc.SupportPackageIsVersion9
 
 const (
 	MemoService_CreateMemo_FullMethodName           = "/memos.api.v1.MemoService/CreateMemo"
+	MemoService_PreviewMemoImport_FullMethodName    = "/memos.api.v1.MemoService/PreviewMemoImport"
+	MemoService_ImportMemoExport_FullMethodName     = "/memos.api.v1.MemoService/ImportMemoExport"
 	MemoService_ListMemos_FullMethodName            = "/memos.api.v1.MemoService/ListMemos"
 	MemoService_GetMemo_FullMethodName              = "/memos.api.v1.MemoService/GetMemo"
 	MemoService_UpdateMemo_FullMethodName           = "/memos.api.v1.MemoService/UpdateMemo"
@@ -48,6 +50,10 @@ const (
 type MemoServiceClient interface {
 	// CreateMemo creates a memo.
 	CreateMemo(ctx context.Context, in *CreateMemoRequest, opts ...grpc.CallOption) (*Memo, error)
+	// PreviewMemoImport validates a MemoArk v1 export without writing data.
+	PreviewMemoImport(ctx context.Context, in *PreviewMemoImportRequest, opts ...grpc.CallOption) (*MemoImportPreview, error)
+	// ImportMemoExport restores supported memo fields from a MemoArk v1 export.
+	ImportMemoExport(ctx context.Context, in *ImportMemoExportRequest, opts ...grpc.CallOption) (*MemoImportResult, error)
 	// ListMemos lists memos with pagination and filter.
 	ListMemos(ctx context.Context, in *ListMemosRequest, opts ...grpc.CallOption) (*ListMemosResponse, error)
 	// GetMemo gets a memo.
@@ -101,6 +107,26 @@ func (c *memoServiceClient) CreateMemo(ctx context.Context, in *CreateMemoReques
 	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
 	out := new(Memo)
 	err := c.cc.Invoke(ctx, MemoService_CreateMemo_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *memoServiceClient) PreviewMemoImport(ctx context.Context, in *PreviewMemoImportRequest, opts ...grpc.CallOption) (*MemoImportPreview, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(MemoImportPreview)
+	err := c.cc.Invoke(ctx, MemoService_PreviewMemoImport_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *memoServiceClient) ImportMemoExport(ctx context.Context, in *ImportMemoExportRequest, opts ...grpc.CallOption) (*MemoImportResult, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(MemoImportResult)
+	err := c.cc.Invoke(ctx, MemoService_ImportMemoExport_FullMethodName, in, out, cOpts...)
 	if err != nil {
 		return nil, err
 	}
@@ -303,6 +329,10 @@ func (c *memoServiceClient) BatchGetLinkMetadata(ctx context.Context, in *BatchG
 type MemoServiceServer interface {
 	// CreateMemo creates a memo.
 	CreateMemo(context.Context, *CreateMemoRequest) (*Memo, error)
+	// PreviewMemoImport validates a MemoArk v1 export without writing data.
+	PreviewMemoImport(context.Context, *PreviewMemoImportRequest) (*MemoImportPreview, error)
+	// ImportMemoExport restores supported memo fields from a MemoArk v1 export.
+	ImportMemoExport(context.Context, *ImportMemoExportRequest) (*MemoImportResult, error)
 	// ListMemos lists memos with pagination and filter.
 	ListMemos(context.Context, *ListMemosRequest) (*ListMemosResponse, error)
 	// GetMemo gets a memo.
@@ -354,6 +384,12 @@ type UnimplementedMemoServiceServer struct{}
 
 func (UnimplementedMemoServiceServer) CreateMemo(context.Context, *CreateMemoRequest) (*Memo, error) {
 	return nil, status.Error(codes.Unimplemented, "method CreateMemo not implemented")
+}
+func (UnimplementedMemoServiceServer) PreviewMemoImport(context.Context, *PreviewMemoImportRequest) (*MemoImportPreview, error) {
+	return nil, status.Error(codes.Unimplemented, "method PreviewMemoImport not implemented")
+}
+func (UnimplementedMemoServiceServer) ImportMemoExport(context.Context, *ImportMemoExportRequest) (*MemoImportResult, error) {
+	return nil, status.Error(codes.Unimplemented, "method ImportMemoExport not implemented")
 }
 func (UnimplementedMemoServiceServer) ListMemos(context.Context, *ListMemosRequest) (*ListMemosResponse, error) {
 	return nil, status.Error(codes.Unimplemented, "method ListMemos not implemented")
@@ -447,6 +483,42 @@ func _MemoService_CreateMemo_Handler(srv interface{}, ctx context.Context, dec f
 	}
 	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
 		return srv.(MemoServiceServer).CreateMemo(ctx, req.(*CreateMemoRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _MemoService_PreviewMemoImport_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(PreviewMemoImportRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(MemoServiceServer).PreviewMemoImport(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: MemoService_PreviewMemoImport_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(MemoServiceServer).PreviewMemoImport(ctx, req.(*PreviewMemoImportRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _MemoService_ImportMemoExport_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(ImportMemoExportRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(MemoServiceServer).ImportMemoExport(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: MemoService_ImportMemoExport_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(MemoServiceServer).ImportMemoExport(ctx, req.(*ImportMemoExportRequest))
 	}
 	return interceptor(ctx, in, info, handler)
 }
@@ -803,6 +875,14 @@ var MemoService_ServiceDesc = grpc.ServiceDesc{
 		{
 			MethodName: "CreateMemo",
 			Handler:    _MemoService_CreateMemo_Handler,
+		},
+		{
+			MethodName: "PreviewMemoImport",
+			Handler:    _MemoService_PreviewMemoImport_Handler,
+		},
+		{
+			MethodName: "ImportMemoExport",
+			Handler:    _MemoService_ImportMemoExport_Handler,
 		},
 		{
 			MethodName: "ListMemos",
